# MonkeGraphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake.sh  leaks.txt  lines.sh  mimalloc.cmake  name
assets/: flip.sh  toBMP.sh
assets/Capo/: capo.gltf
assets/Fox/: Fox.gltf
assets/SimpleSkin/glTF/: SimpleSkin.gltf
assets/Sphere/: sphere.gltf
assets/vampire/: vampire.gltf
assets/whale/: whale.CYCLES.gltf
libs/adt/: Arena.hh  Arr.hh  Array.hh  ChunkAllocator.hh  Directory.hh  FreeList.hh  IAllocator.hh  IException.hh  Map.hh  MiMalloc.hh  MutexArena.hh  Opt.hh  Pool.hh  Queue.hh  QueueArray.hh  QueueLockFree.hh  QueueSPMC.hh  QueueSPSC.hh  RBTree.hh  ScratchBuffer.hh  Set.hh  Span.hh  Span2D.hh  StdAllocator.hh  String.hh  StringDecl.hh  StringTypes.hh  Thread.hh  ThreadPool.hh  Vec.hh  View.hh  assert.hh  atomic.hh  bin.hh  file.hh  hash.hh  logs.hh  math.hh  math2.hh  mathDecl.hh  (+6 more)
libs/json/: Parser.hh
src/: BMP.hh  IWindow.hh  Image.cc  Image.hh  Model.cc  Model.hh  app.cc  app.hh  asset.cc  asset.hh  bmp.hh  clip.cc  clip.hh  colors.hh  common.cc  common.hh  control.cc  control.hh  draw.cc  draw.hh  frame.cc  frame.hh  game.cc  game.hh  gl.cc  gl.hh  keys.hh  main.cc  model.hh  ui.cc  ui.hh
src/game/: Entity.hh  game.cc  game.hh
src/gl/: gl.cc  gl.hh  glfunc.cc  glsl.hh
src/gltf/: Model.cc  Model.hh  gltf.cc  gltf.hh  types.hh
src/json/: Lexer.cc  Lexer.hh  Parser.cc  Parser.hh
src/platform/: glcorearb.h  glfunc.cc  glfunc.hh
src/platform/wayland/: Client.cc  Client.hh  ClientGL.cc  ClientGL.hh  ClientInput.cc  shm.hh
src/platform/wayland/wayland-protocols/: pointer-constraints-unstable-v1.c  pointer-constraints-unstable-v1.h  presentation-time.c  presentation-time.h  relative-pointer-unstable-v1.c  relative-pointer-unstable-v1.h  xdg-shell.c  xdg-shell.h
src/platform/win32/: Window.cc  Window.hh  WindowInput.cc
src/render/: IRenderer.hh
src/render/gl/: Text.cc  Text.hh  gl.cc  gl.hh  glfunc.cc  glfunc.hh  glui.cc  glui.hh
src/render/sw/: clip.cc  clip.hh  sw.cc  sw.hh
src/shaders/: glsl.hh
src/shaders/quad/: tex.frag  tex.vert
src/ttf/: Font.cc  Font.hh  Rasterizer.cc  Rasterizer.hh  types.hh
